[tool.poetry]
name = "cipher2_jp4100"
version = "0.1.0"
description = "Caesar Cipher"
authors = ["JingchaoPeng <jingchao.p@columbia.edu>"]
license = "MIT"
documentation = 'https://cipher2_jp4100.readthedocs.io'
homepage = "https://github.com/QMSS-G5072-2020/cipher_peng_jingchao2"
repository = "https://github.com/QMSS-G5072-2020/cipher_peng_jingchao2"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
codecov = "^2.1.10"
python-semantic-release = "^7.3.0"
flake8 = "^3.8.4"
Sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
